test_programs/compile_failure/dep_impl_primitive/src/main.nr
use dep::bad_impl;

fn main(x: field) {
    x.something();
}
